Comment out welcome-text fonst-size styling to test whether it fixes bug where page is jumping on smallest screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 #welcome-text {
-    font-size: 22px;
+    /* font-size: 22px; */
     padding: 10px;
     margin: 0;
 }
@@ -167,9 +167,9 @@ button:disabled {
         width: 286px;
     }
 
-    #welcome-text {
+    /* #welcome-text {
         font-size: 18px;
-    }
+    } */
 
     .answer-btn {
         width: 118px;
